--- a/README
+++ b/README
@@ -1,3 +1,13 @@
+…or create a new repository on the command line
+
+echo "# SunplusIT-APP" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git remote add origin git@github.com:ttseng5897/SunplusIT-APP.git
+git push -u origin master
+
+
 Welcome to Alloy. Prepare to be amazed.
 =======================================
 
